# lab-4-zhoraaim-1

./: CMakeLists.txt
src/resource_core/: CMakeLists.txt  resource_core.cpp
src/resource_core/include/: resource_core.h
tests/: CMakeLists.txt  tests.cpp
